fix urlencode query params